discord-frontend/hartex-discord-entitycache-test/tests/ui/expected_parenthesized_token_group.stderr
error: expected parenthesized token group
  --> tests/ui/expected_parenthesized_token_group.rs:27:13
   |
27 |     #[entity[]]
   |             ^^
